// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown widget should snapshot when opened: dropdown open 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        The total number of boxes the forklift can carry is 
        <div
          class="perseus-widget-container widget-nohighlight widget-inline-block"
        >
          <div
            class=""
            style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
          >
            <div
              class="perseus-dropdown"
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
            >
              <button
                aria-controls=":r4:"
                aria-disabled="false"
                aria-expanded="true"
                aria-haspopup="listbox"
                aria-invalid="false"
                aria-label="Select an answer"
                class=""
                id=":r3:"
                role="combobox"
                style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: space-between; height: 40px; padding-left: 16px; padding-right: 12px; border-radius: var(--wb-border-radius-radius_040); border-style: solid; outline: none; text-decoration: none; box-sizing: border-box; white-space: nowrap;"
                type="button"
              >
                <span
                  class=""
                  style="display: block; font-family: Lato, "Noto Sans", sans-serif; font-weight: 400; font-size: 16px; line-height: 20px; margin-right: 8px; white-space: nowrap; user-select: none; overflow: hidden; text-overflow: ellipsis;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        greater/less than or equal to
                      </div>
                    </div>
                  </div>
                </span>
                <span
                  aria-hidden="true"
                  class=""
                  style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: 16px; height: 16px; mask-image: url(caret-down-bold.svg); min-width: 16px;"
                />
              </button>
            </div>
          </div>
        </div>
         
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            60
          </span>
          <span />
        </span>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown widget should snapshot: initial render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        The total number of boxes the forklift can carry is 
        <div
          class="perseus-widget-container widget-nohighlight widget-inline-block"
        >
          <div
            class=""
            style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
          >
            <div
              class="perseus-dropdown"
              style="align-items: stretch; border-width: 0px; border-style: solid; box-sizing: border-box; display: flex; flex-direction: column; margin: 0px; padding: 0px; position: relative; z-index: 0; min-height: 0; min-width: 0;"
            >
              <button
                aria-controls=":r1:"
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-invalid="false"
                aria-label="Select an answer"
                class=""
                id=":r0:"
                role="combobox"
                style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: space-between; height: 40px; padding-left: 16px; padding-right: 12px; border-radius: var(--wb-border-radius-radius_040); border-style: solid; outline: none; text-decoration: none; box-sizing: border-box; white-space: nowrap;"
                type="button"
              >
                <span
                  class=""
                  style="display: block; font-family: Lato, "Noto Sans", sans-serif; font-weight: 400; font-size: 16px; line-height: 20px; margin-right: 8px; white-space: nowrap; user-select: none; overflow: hidden; text-overflow: ellipsis;"
                >
                  <div
                    class="perseus-renderer perseus-renderer-responsive"
                  >
                    <div
                      class="paragraph"
                      data-perseus-paragraph-index="0"
                    >
                      <div
                        class="paragraph"
                      >
                        greater/less than or equal to
                      </div>
                    </div>
                  </div>
                </span>
                <span
                  aria-hidden="true"
                  class=""
                  style="display: inline-block; vertical-align: text-bottom; flex-shrink: 0; flex-grow: 0; mask-size: 100%; mask-repeat: no-repeat; mask-position: center; width: 16px; height: 16px; mask-image: url(caret-down-bold.svg); min-width: 16px;"
                />
              </button>
            </div>
          </div>
        </div>
         
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            60
          </span>
          <span />
        </span>
        .
      </div>
    </div>
  </div>
</div>
`;
